RESOLVED FIXED130406
Fix cue rendering test and include support for left/right alignment.
https://bugs.webkit.org/show_bug.cgi?id=130406
Summary Fix cue rendering test and include support for left/right alignment.
Brent Fulgham
Reported 2014-03-18 10:44:29 PDT
Attachments
Patch (22.93 KB, patch)
2014-03-19 11:29 PDT, Brent Fulgham
eric.carlson: review+
Brent Fulgham
Comment 1 2014-03-19 11:29:36 PDT
Eric Carlson
Comment 2 2014-03-19 11:34:30 PDT
Comment on attachment 227204 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=227204&action=review > Source/WebCore/html/track/VTTCue.cpp:618 > + } else { > + ASSERT_NOT_REACHED(); > } Nit: I don't think the braces are necessary.
Brent Fulgham
Comment 3 2014-03-19 11:37:12 PDT
(In reply to comment #2) > (From update of attachment 227204 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=227204&action=review > > > Source/WebCore/html/track/VTTCue.cpp:618 > > + } else { > > + ASSERT_NOT_REACHED(); > > } > > Nit: I don't think the braces are necessary. OK. I'll remove!
Brent Fulgham
Comment 4 2014-03-19 12:00:55 PDT
Note You need to log in before you can comment on or make changes to this bug.